--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "shadcn-landing-page-template",
-  "description": "Landing page template utilizing Shadcn, React, Typescript, and Tailwind CSS for rapid development and responsive design.",
+  "name": "bxbx",
+  "description": "Landing page ",
   "author": {
-    "name": "Leopoldo Miranda",
-    "email": "leomirandadev@gmail.com",
-    "url": "https://github.com/leoMirandaa"
+    "name": "SemiColonError",
+    "email": "123@gmail.com",
+    "url": "https://github.com/"
   },
   "license": "MIT",
   "keywords": [
